Remove use of String.formatted